Zoom fix on mobile

--- a/css/mq.css
+++ b/css/mq.css
@@ -1,6 +1,7 @@
 @media(max-width:780px) {
     body,
     html{
+        width: 100%;
         height: 100vh;
         background-size: cover;
         overflow-x: hidden;
